force-app/main/integration/objects/Integration_Patient_Referral__c/Integration_Patient_Referral__c.object-meta.xml
<CustomObject>
    <label>Integration Patient Referral</label>
    <nameField>
        <label>Integration Patient Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Patient Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>