force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Address_City__c.field-meta.xml
<CustomField>
    <fullName>Address_City__c</fullName>
    <label>Address_City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>