force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Address_Country__c</fullName>
    <label>Address_Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>