force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Address_State__c.field-meta.xml
<CustomField>
    <fullName>Address_State__c</fullName>
    <label>Address_State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>