force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Atid__c.field-meta.xml
<CustomField>
    <fullName>Atid__c</fullName>
    <label>Attribution ID</label>
    <length>75</length>
    <type>Text</type>
</CustomField>