force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Batch_consideration__c.field-meta.xml
<CustomField>
    <fullName>Batch_consideration__c</fullName>
    <label>Batch consideration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not considered</fullName>
            </value>
            <value>
                <fullName>Not completed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Archieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>