force-app/main/integration/objects/Integration_Patient_Referral__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>BirthDate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>