force-app/main/integration/objects/Integration_Patient_Referral__c/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <label>BMI</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>