force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Comorbidities__c.field-meta.xml
<CustomField>
    <fullName>Comorbidities__c</fullName>
    <label>Comorbidities</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>