force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Condition_Of_Interests__c.field-meta.xml
<CustomField>
    <fullName>Condition_Of_Interests__c</fullName>
    <label>Condition_Of_Interests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>