force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Delegate_Alternative_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Alternative_Phone_Number__c</fullName>
    <label>Delegate Alternative Phone Number</label>
    <type>Phone</type>
</CustomField>