force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Delegate_Daytime_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Daytime_Phone_Number__c</fullName>
    <label>Delegate Daytime Phone Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>