force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Delegate_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Email_Address__c</fullName>
    <label>Delegate Email Address</label>
    <type>Email</type>
</CustomField>