force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Delegate_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Delegate_First_Name__c</fullName>
    <label>Delegate First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>