force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Delegate_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Mailing_State__c</fullName>
    <label>Delegate Mailing State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>