force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Delegate_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Middle_Name__c</fullName>
    <label>Delegate Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>