force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Delegate_Phone_Number_Type__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Phone_Number_Type__c</fullName>
    <label>Delegate Phone Number Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>