force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Delegate_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Suffix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delegate Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>