force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Delegate_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Delegate_Zip_Postal_Code__c</fullName>
    <label>Delegate Zip/Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>