force-app/main/integration/objects/Integration_Patient_Referral__c/fields/firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <label>firstName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>