force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Is_retry_required__c.field-meta.xml
<CustomField>
    <fullName>Is_retry_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is retry required</label>
    <type>Checkbox</type>
</CustomField>