force-app/main/integration/objects/Integration_Patient_Referral__c/fields/MRR_Survey_Results_URL__c.field-meta.xml
<CustomField>
    <fullName>MRR_Survey_Results_URL__c</fullName>
    <label>MRR Survey  Results URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>