force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Participant_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Enrollment</label>
    <referenceTo>Participant_Enrollment__c</referenceTo>
    <relationshipLabel>Integration Patient Referrals</relationshipLabel>
    <relationshipName>Integration_Patient_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>