force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Participant_MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>Participant_MobileNumber__c</fullName>
    <label>Participant MobileNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>