force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Pass_Fail__c.field-meta.xml
<CustomField>
    <fullName>Pass_Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass_Fail</label>
    <type>Checkbox</type>
</CustomField>