force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Preferred_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Contact Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>