force-app/main/integration/objects/Integration_Patient_Referral__c/fields/protocolId__c.field-meta.xml
<CustomField>
    <fullName>protocolId__c</fullName>
    <label>protocolId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>