force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Referral_Sent_to_PI__c.field-meta.xml
<CustomField>
    <fullName>Referral_Sent_to_PI__c</fullName>
    <label>Referral_Sent_to_PI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>