force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Referred_Date__c.field-meta.xml
<CustomField>
    <fullName>Referred_Date__c</fullName>
    <label>Referred_Date</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>