force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Report_Count_Days__c.field-meta.xml
<CustomField>
    <fullName>Report_Count_Days__c</fullName>
    <formula>Retry_Count__c / 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Count Days</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>