force-app/main/integration/objects/Integration_Patient_Referral__c/fields/sex__c.field-meta.xml
<CustomField>
    <fullName>sex__c</fullName>
    <label>sex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>