force-app/main/integration/objects/Integration_Patient_Referral__c/fields/Suffix__c.field-meta.xml
<CustomField>
    <fullName>Suffix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suffix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>