force-app/main/integration/objects/Integration_Patient_Referral__c/fields/UTM_campaignContent__c.field-meta.xml
<CustomField>
    <fullName>UTM_campaignContent__c</fullName>
    <label>utm_content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>