force-app/main/integration/objects/Integration_Patient_Referral__c/fields/UTM_campaignCookie__c.field-meta.xml
<CustomField>
    <fullName>UTM_campaignCookie__c</fullName>
    <label>utmz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>