force-app/main/integration/objects/Integration_Patient_Referral__c/fields/UTM_campaignMedium__c.field-meta.xml
<CustomField>
    <fullName>UTM_campaignMedium__c</fullName>
    <label>UTM_campaignMedium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>