force-app/main/integration/objects/Integration_Patient_Referral__c/fields/UTM_campaignName__c.field-meta.xml
<CustomField>
    <fullName>UTM_campaignName__c</fullName>
    <label>UTM_campaignName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>