force-app/main/integration/objects/Integration_Patient_Referral__c/fields/UTM_campaignSource__c.field-meta.xml
<CustomField>
    <fullName>UTM_campaignSource__c</fullName>
    <label>utm_source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>