force-app/main/integration/objects/Integration_Patient_Referral__c/fields/UTM_campaignTerm__c.field-meta.xml
<CustomField>
    <fullName>UTM_campaignTerm__c</fullName>
    <label>UTM_campaignTerm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>