force-app/main/integration/objects/Integration_Patient_Referral__c/fields/UTM_GCLID__c.field-meta.xml
<CustomField>
    <fullName>UTM_GCLID__c</fullName>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>